@@ -18,7 +18,7 @@
 
 package io.kadai.task.rest;
 
-import static io.kadai.rest.test.RestHelper.CLIENT;
+
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -50,6 +50,7 @@ import java.io.BufferedWriter;
 import java.io.OutputStreamWriter;
 import java.lang.reflect.Field;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.time.Instant;
@@ -84,6 +85,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.HttpClientErrorException.NotFound;
 import org.springframework.web.client.HttpStatusCodeException;
+import org.springframework.web.client.RestClient;
 import org.testcontainers.shaded.com.google.common.collect.Lists;
 
 /** Test Task Controller. */
@@ -95,11 +97,13 @@ class TaskControllerIntTest {
       BULK_RESULT_TASKS_MODEL_TYPE = new ParameterizedTypeReference<>() {};
 
   private final RestHelper restHelper;
+  private final RestClient restClient;
   @Autowired KadaiConfiguration kadaiConfiguration;
 
   @Autowired
-  TaskControllerIntTest(RestHelper restHelper) {
+  TaskControllerIntTest(RestHelper restHelper, RestClient restClient) {
     this.restHelper = restHelper;
+    this.restClient = restClient;
   }
 
   @Test
@@ -107,7 +111,7 @@ class TaskControllerIntTest {
     final String url = restHelper.toUrl("/api/v1/tasks/TKI:000000000000000000000000000000000104");
 
     ResponseEntity<TaskRepresentationModel> responseGet =
-        CLIENT
+        restClient
             .get()
             .uri(url)
             .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -123,7 +127,7 @@ class TaskControllerIntTest {
     theTaskRepresentationModel.setOwner("dummyUser");
 
     ResponseEntity<TaskRepresentationModel> responseUpdate =
-        CLIENT
+        restClient
             .put()
             .uri(url)
             .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -203,7 +207,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -222,7 +226,7 @@ class TaskControllerIntTest {
               + "?workbasket-id=WBI:100000000000000000000000000000000001";
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -251,7 +255,7 @@ class TaskControllerIntTest {
                   firstInstant, secondInstant, thirdInstant, fourthInstant);
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -268,7 +272,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000025");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -299,7 +303,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s=%s",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -327,7 +331,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-from=%s",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -355,7 +359,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-from=-1&custom-int-%s-to=123",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -383,7 +387,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-to=%s",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -411,7 +415,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-not=25",
                         i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -443,7 +447,7 @@ class TaskControllerIntTest {
                         i, i, i, i);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .get()
                         .uri(url)
                         .headers(
@@ -482,7 +486,7 @@ class TaskControllerIntTest {
                         i, i, i);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .get()
                         .uri(url)
                         .headers(
@@ -520,7 +524,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-within=15",
                         i, i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -550,7 +554,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-within=%s",
                         i, i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -580,7 +584,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-not-within=",
                         i, i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -609,7 +613,7 @@ class TaskControllerIntTest {
               + plannedToInstant
               + "&sort-by=PLANNED";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -631,7 +635,7 @@ class TaskControllerIntTest {
               + plannedFromInstant
               + "&sort-by=PLANNED";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -656,7 +660,7 @@ class TaskControllerIntTest {
               + "&sort-by=planned";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -687,7 +691,7 @@ class TaskControllerIntTest {
                       + "&sort-by=DUE",
                   firstInstant, secondInstant, thirdInstant, fourthInstant);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -710,7 +714,7 @@ class TaskControllerIntTest {
                       + "&priority-from=%s&priority-until=%s",
                   priorityFrom, priorityTo);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -733,7 +737,7 @@ class TaskControllerIntTest {
                       + "&priority-within=%s&priority-within=&priority-within=%s&priority-within=",
                   priorityFrom1, priorityFrom2);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -756,7 +760,7 @@ class TaskControllerIntTest {
                       + "&priority-not-from=%s&priority-not-until=%s",
                   priorityFrom, priorityTo);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -780,7 +784,7 @@ class TaskControllerIntTest {
                       + "&priority-not-within=%s&priority-not-within=",
                   priorityFrom1, priorityFrom2);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -806,7 +810,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -833,7 +837,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -860,7 +864,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -887,7 +891,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -911,7 +915,7 @@ class TaskControllerIntTest {
                       + "&classification-parent-key=%s",
                   parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -933,7 +937,7 @@ class TaskControllerIntTest {
                       + "&classification-parent-key-not=%s",
                   parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -952,7 +956,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS)
               + String.format("?classification-parent-key-like=%s", parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -971,7 +975,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS)
               + String.format("?classification-parent-key-not-like=%s", parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -991,7 +995,7 @@ class TaskControllerIntTest {
               + URLEncoder.encode(
                   "{\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1010,7 +1014,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"type\":\"Type2\",\"value\":\"Value2\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1029,7 +1033,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"company\":\"Company3\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1048,7 +1052,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"type\":\"Type2\",\"value\":\"Quatsch\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1069,7 +1073,7 @@ class TaskControllerIntTest {
               + "&wildcard-search-fields=CUSTOM_3"
               + "&wildcard-search-fields=CUSTOM_4";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1097,7 +1101,7 @@ class TaskControllerIntTest {
             String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .post()
                         .uri(url)
                         .headers(
@@ -1127,7 +1131,7 @@ class TaskControllerIntTest {
               + "&sort-by=NAME&order=DESCENDING&page-size=5&page=2";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1152,7 +1156,7 @@ class TaskControllerIntTest {
               + "&sort-by=NAME&order=WRONG";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1174,7 +1178,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000000");
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-b-1")))
@@ -1192,7 +1196,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?wildcard-search-value=%rt%";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1211,7 +1215,7 @@ class TaskControllerIntTest {
               + "?wildcard-search-fields=NAME,CUSTOM_3,CUSTOM_4";
       ThrowingCallable httpCall2 =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url2)
                   .headers(
@@ -1239,7 +1243,7 @@ class TaskControllerIntTest {
               + dueToInstant
               + "&sort-by=DUE";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1261,7 +1265,7 @@ class TaskControllerIntTest {
               + dueToInstant
               + "&sort-by=DUE";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1285,7 +1289,7 @@ class TaskControllerIntTest {
               + "&sort-by=planned";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1306,7 +1310,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS) + "?workbasket-key=USER-1-2&domain=DOMAIN_A";
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -1325,7 +1329,7 @@ class TaskControllerIntTest {
               + "?external-id=ETI:000000000000000000000000000000000003"
               + "&external-id=ETI:000000000000000000000000000000000004";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1342,7 +1346,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?workbasket-key=USER-1-2";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -1360,7 +1364,7 @@ class TaskControllerIntTest {
     void should_GetAllTasksWithAdminRole() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1378,7 +1382,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS)
               + "?por-type=VNR&por-value=22334455&sort-by=POR_VALUE&order=DESCENDING";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1407,7 +1411,7 @@ class TaskControllerIntTest {
         String queryParams, int expectedSize) {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?" + queryParams;
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1425,7 +1429,7 @@ class TaskControllerIntTest {
     void should_TreatOwnerIsNullTrue_For_Value(String value) {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?owner-is-null" + value;
       ResponseEntity<TaskSummaryCollectionRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1445,7 +1449,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1468,7 +1472,7 @@ class TaskControllerIntTest {
               + "&sort-by=TASK_ID&order=ASCENDING"
               + "&page-size=5&page=16";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1501,7 +1505,7 @@ class TaskControllerIntTest {
               + "?sort-by=OWNER_LONG_NAME"
               + "&order=DESCENDING";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1521,7 +1525,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?group-by=POR_VALUE";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1550,7 +1554,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?group-by-sor=Type2";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1576,7 +1580,7 @@ class TaskControllerIntTest {
               + "?sort-by=DUE&sort-by=TASK_ID&"
               + "order=DESCENDING&order=ASCENDING";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1592,7 +1596,7 @@ class TaskControllerIntTest {
               + "order=DESCENDING&order=ASCENDING&"
               + "page-size=5&page=5";
       response =
-          CLIENT
+          restClient
               .get()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1627,7 +1631,7 @@ class TaskControllerIntTest {
               + "order=ASCENDING&order=ASCENDING&"
               + "page-size=5&page=2";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1655,7 +1659,7 @@ class TaskControllerIntTest {
     void should_GetAllTasksWithComments_When_FilteringByHasCommentsIsSetToTrue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?has-comments=true";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1679,7 +1683,7 @@ class TaskControllerIntTest {
     void should_GetAllTasksWithoutComments_When_FilteringByHasCommentsIsSetToFalse() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?has-comments=false";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1705,7 +1709,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000002");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1721,7 +1725,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTaskWithoutAttachments() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?without-attachment=true";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1739,7 +1743,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .get()
                       .uri(url)
                       .headers(
@@ -1756,7 +1760,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000001");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1772,7 +1776,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksBySecondaryObjectReferenceValue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?sor-value=Value2";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1788,7 +1792,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksBySecondaryObjectReferenceTypeLike() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?sor-type-like=Type";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1805,7 +1809,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS) + "?sor-value=Value2&sor-company=Company1";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1821,7 +1825,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksByIsReopenedFalse() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?is-reopened=false";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1839,7 +1843,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksByIsReopenedTrue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?is-reopened=true";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1858,7 +1862,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000070000000000000079");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1876,7 +1880,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000024");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1899,7 +1903,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS);
 
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1917,7 +1921,7 @@ class TaskControllerIntTest {
               + "?workbasket-id=WBI:100000000000000000000000000000000001";
 
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1933,7 +1937,7 @@ class TaskControllerIntTest {
       String filterParams = "?workbasket-id=WBI:100000000000000000000000000000000001";
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> tasksResponse =
-          CLIENT
+          restClient
               .get()
               .uri(restHelper.toUrl(RestEndpoints.URL_TASKS) + filterParams)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1941,7 +1945,7 @@ class TaskControllerIntTest {
               .toEntity(TaskSummaryPagedRepresentationModel.class);
 
       ResponseEntity<TaskIdPagedRepresentationModel> idsResponse =
-          CLIENT
+          restClient
               .get()
               .uri(restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + filterParams)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1964,7 +1968,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?page=1&page-size=5";
 
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1982,7 +1986,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?state=CLAIMED";
 
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2000,7 +2004,7 @@ class TaskControllerIntTest {
               + "?workbasket-id=WBI:100000000000000000000000000000000001";
 
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2030,7 +2034,7 @@ class TaskControllerIntTest {
                   firstInstant, secondInstant, thirdInstant, fourthInstant);
 
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2054,7 +2058,7 @@ class TaskControllerIntTest {
               + plannedToInstant
               + "&sort-by=PLANNED";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2075,7 +2079,7 @@ class TaskControllerIntTest {
               + plannedFromInstant
               + "&sort-by=PLANNED";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2098,7 +2102,7 @@ class TaskControllerIntTest {
               + "&sort-by=planned";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -2129,7 +2133,7 @@ class TaskControllerIntTest {
                       + "&sort-by=DUE",
                   firstInstant, secondInstant, thirdInstant, fourthInstant);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2153,7 +2157,7 @@ class TaskControllerIntTest {
               + dueToInstant
               + "&sort-by=DUE";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2174,7 +2178,7 @@ class TaskControllerIntTest {
               + dueToInstant
               + "&sort-by=DUE";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2197,7 +2201,7 @@ class TaskControllerIntTest {
               + "&sort-by=planned";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -2223,7 +2227,7 @@ class TaskControllerIntTest {
                       + "&priority-from=%s&priority-until=%s",
                   priorityFrom, priorityTo);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2245,7 +2249,7 @@ class TaskControllerIntTest {
                       + "&priority-within=%s&priority-within=&priority-within=%s&priority-within=",
                   priorityFrom1, priorityFrom2);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2267,7 +2271,7 @@ class TaskControllerIntTest {
                       + "&priority-not-from=%s&priority-not-until=%s",
                   priorityFrom, priorityTo);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2290,7 +2294,7 @@ class TaskControllerIntTest {
                       + "&priority-not-within=%s&priority-not-within=",
                   priorityFrom1, priorityFrom2);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2315,7 +2319,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2343,7 +2347,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2370,7 +2374,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2398,7 +2402,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2424,7 +2428,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s=%s",
                         i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2451,7 +2455,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-from=%s",
                         i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2478,7 +2482,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-from=-1&custom-int-%s-to=123",
                         i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2505,7 +2509,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-to=%s",
                         i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2532,7 +2536,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-not=25",
                         i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2563,7 +2567,7 @@ class TaskControllerIntTest {
                         i, i, i, i);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .get()
                         .uri(url)
                         .headers(
@@ -2602,7 +2606,7 @@ class TaskControllerIntTest {
                         i, i, i);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .get()
                         .uri(url)
                         .headers(
@@ -2640,7 +2644,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-within=15",
                         i, i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2669,7 +2673,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-within=%s",
                         i, i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2698,7 +2702,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-not-within=",
                         i, i, i);
             ResponseEntity<TaskIdPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -2723,7 +2727,7 @@ class TaskControllerIntTest {
                       + "&classification-parent-key=%s",
                   parentKey);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2745,7 +2749,7 @@ class TaskControllerIntTest {
                       + "&classification-parent-key-not=%s",
                   parentKey);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2764,7 +2768,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_IDS)
               + String.format("?classification-parent-key-like=%s", parentKey);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2783,7 +2787,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_IDS)
               + String.format("?classification-parent-key-not-like=%s", parentKey);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2803,7 +2807,7 @@ class TaskControllerIntTest {
               + URLEncoder.encode(
                   "{\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\"}", UTF_8);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2822,7 +2826,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"type\":\"Type2\",\"value\":\"Value2\"}", UTF_8);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2841,7 +2845,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"company\":\"Company3\"}", UTF_8);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2860,7 +2864,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"type\":\"Type2\",\"value\":\"Quatsch\"}", UTF_8);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2881,7 +2885,7 @@ class TaskControllerIntTest {
               + "&wildcard-search-fields=CUSTOM_3"
               + "&wildcard-search-fields=CUSTOM_4";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2897,7 +2901,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?wildcard-search-value=%rt%";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -2916,7 +2920,7 @@ class TaskControllerIntTest {
               + "?wildcard-search-fields=NAME,CUSTOM_3,CUSTOM_4";
       ThrowingCallable httpCall2 =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url2)
                   .headers(
@@ -2941,7 +2945,7 @@ class TaskControllerIntTest {
               + "&sort-by=NAME&order=DESCENDING&page-size=5&page=2";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -2966,7 +2970,7 @@ class TaskControllerIntTest {
               + "&sort-by=NAME&order=WRONG";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -2986,7 +2990,7 @@ class TaskControllerIntTest {
     void should_GetAllTaskIdsWithAdminRole() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS);
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3003,7 +3007,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_IDS)
               + "?workbasket-key=USER-1-2&domain=DOMAIN_A";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3021,7 +3025,7 @@ class TaskControllerIntTest {
               + "?external-id=ETI:000000000000000000000000000000000003"
               + "&external-id=ETI:000000000000000000000000000000000004";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3037,7 +3041,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?workbasket-key=USER-1-2";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3064,7 +3068,7 @@ class TaskControllerIntTest {
     void should_ReturnTaskIdsWithVariousOwnerParameters(String queryParams, int expectedSize) {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?" + queryParams;
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3081,7 +3085,7 @@ class TaskControllerIntTest {
     void should_TreatOwnerIsNullTrue_For_Value_ForTaskIds(String value) {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?owner-is-null" + value;
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3099,7 +3103,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -3118,7 +3122,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTaskIds_When_GettingTasksByIsReopenedFalse() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?is-reopened=false";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3133,7 +3137,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTaskIds_When_GettingTasksByIsReopenedTrue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?is-reopened=true";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3148,7 +3152,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTaskIds_When_GettingTasksBySecondaryObjectReferenceValue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?sor-value=Value2";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3163,7 +3167,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTaskIds_When_GettingTasksBySecondaryObjectReferenceTypeLike() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?sor-type-like=Type";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3180,7 +3184,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_IDS)
               + "?sort-by=DUE&sort-by=TASK_ID&order=DESCENDING&order=ASCENDING";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3200,7 +3204,7 @@ class TaskControllerIntTest {
               + "&sort-by=TASK_ID&order=ASCENDING"
               + "&page-size=5&page=16";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3219,7 +3223,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_IDS) + "?sor-value=Value2&sor-company=Company1";
       ResponseEntity<TaskIdPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3240,7 +3244,7 @@ class TaskControllerIntTest {
       TaskRepresentationModel taskRepresentationModel = getTaskResourceSample();
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3255,7 +3259,7 @@ class TaskControllerIntTest {
 
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3274,7 +3278,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url)
                   .headers(
@@ -3301,7 +3305,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3314,7 +3318,7 @@ class TaskControllerIntTest {
 
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3330,7 +3334,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3346,7 +3350,7 @@ class TaskControllerIntTest {
       String taskIdOfCreatedTask = responseCreate.getBody().getTaskId();
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3361,7 +3365,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3377,7 +3381,7 @@ class TaskControllerIntTest {
       String taskIdOfCreatedTask = responseCreate.getBody().getTaskId();
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3399,7 +3403,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3417,7 +3421,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3431,7 +3435,7 @@ class TaskControllerIntTest {
       String url2 =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, responseCreate.getBody().getTaskId());
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3449,7 +3453,7 @@ class TaskControllerIntTest {
               + "\"primaryObjRef\":{\"company\":\"MyCompany1\",\"system\":\"MySystem1\","
               + "\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\",\"value\":\"00000001\"}}";
 
-      URL url = new URL(restHelper.toUrl(RestEndpoints.URL_TASKS));
+      URL url = URI.create(restHelper.toUrl(RestEndpoints.URL_TASKS)).toURL();
       HttpURLConnection con = (HttpURLConnection) url.openConnection();
       con.setRequestMethod("POST");
       con.setDoOutput(true);
@@ -3469,7 +3473,7 @@ class TaskControllerIntTest {
               + "\"primaryObjRef\":{\"company\":\"MyCompany1\",\"system\":\"MySystem1\","
               + "\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\",\"value\":\"00000001\"}}";
 
-      url = new URL(restHelper.toUrl(RestEndpoints.URL_TASKS));
+      url = URI.create(restHelper.toUrl(RestEndpoints.URL_TASKS)).toURL();
       con = (HttpURLConnection) url.openConnection();
       con.setRequestMethod("POST");
       con.setDoOutput(true);
@@ -3494,7 +3498,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:100000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3505,7 +3509,7 @@ class TaskControllerIntTest {
       Instant expectedReceived = Instant.parse("2019-09-13T08:44:17.588Z");
       originalTask.setReceived(expectedReceived);
       ResponseEntity<TaskRepresentationModel> responseUpdate =
-          CLIENT
+          restClient
               .put()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3523,7 +3527,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:100000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3533,7 +3537,7 @@ class TaskControllerIntTest {
       final TaskRepresentationModel originalTask = responseGet.getBody();
       assertThat(originalTask).isNotNull();
       ResponseEntity<TaskRepresentationModel> responseUpdate =
-          CLIENT
+          restClient
               .put()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3551,7 +3555,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:100000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3567,7 +3571,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .put()
                   .uri(url)
                   .headers(
@@ -3682,7 +3686,7 @@ class TaskControllerIntTest {
 
       // When: Performing bulk update
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3708,7 +3712,7 @@ class TaskControllerIntTest {
       // Verify that one of the tasks was actually updated by fetching it
       String firstTaskId = taskIds.get(0);
       ResponseEntity<TaskRepresentationModel> getResponse =
-          CLIENT
+          restClient
               .get()
               .uri(restHelper.toUrl("/api/v1/tasks/" + firstTaskId))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3845,7 +3849,7 @@ class TaskControllerIntTest {
 
       // When: Performing bulk update
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3888,7 +3892,7 @@ class TaskControllerIntTest {
 
       // Verify that the successful task was actually updated
       ResponseEntity<TaskRepresentationModel> taskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(restHelper.toUrl("/api/v1/tasks/TKI:000000000000000000000000000000000003"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -3911,7 +3915,7 @@ class TaskControllerIntTest {
           assertThrows(
               HttpClientErrorException.BadRequest.class,
               () ->
-                  CLIENT
+                  restClient
                       .patch()
                       .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
                       .headers(
@@ -3932,7 +3936,7 @@ class TaskControllerIntTest {
       requestBody.put("taskIds", List.of());
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3954,7 +3958,7 @@ class TaskControllerIntTest {
           assertThrows(
               HttpClientErrorException.BadRequest.class,
               () ->
-                  CLIENT
+                  restClient
                       .patch()
                       .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
                       .headers(
@@ -3975,7 +3979,7 @@ class TaskControllerIntTest {
       requestBody.put("fieldsToUpdate", Map.of());
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3997,7 +4001,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000039");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4007,7 +4011,7 @@ class TaskControllerIntTest {
       assertThat(responseGet.getBody().getState()).isEqualTo(TaskState.COMPLETED);
 
       ResponseEntity<TaskRepresentationModel> responseDelete =
-          CLIENT
+          restClient
               .delete()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4018,7 +4022,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4042,7 +4046,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_FORCE, "TKI:000000000000000000000000000000000026");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4052,7 +4056,7 @@ class TaskControllerIntTest {
       assertThat(responseGet.getBody().getState()).isEqualTo(TaskState.CLAIMED);
 
       ResponseEntity<TaskRepresentationModel> responseDelete =
-          CLIENT
+          restClient
               .delete()
               .uri(urlForce)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4063,7 +4067,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4089,7 +4093,7 @@ class TaskControllerIntTest {
               + "&custom14=abc";
 
       ResponseEntity<TaskSummaryCollectionRepresentationModel> response =
-          CLIENT
+          restClient
               .delete()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4112,7 +4116,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4127,7 +4131,7 @@ class TaskControllerIntTest {
       // set Owner and update Task
       taskRepresentationModel.setOwner("dummyUser");
       ResponseEntity<TaskRepresentationModel> responseUpdate =
-          CLIENT
+          restClient
               .put()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4147,7 +4151,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4164,7 +4168,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .put()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4194,7 +4198,7 @@ class TaskControllerIntTest {
       ThrowingConsumer<Pair<Boolean, String>> test =
           pair -> {
             ResponseEntity<TaskRepresentationModel> response =
-                CLIENT
+                restClient
                     .post()
                     .uri(url)
                     .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4221,7 +4225,7 @@ class TaskControllerIntTest {
               "TKI:000000000000000000000000000000000003",
               "WBI:100000000000000000000000000000000006");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4253,7 +4257,7 @@ class TaskControllerIntTest {
       ThrowingConsumer<Pair<Boolean, String>> test =
           pair -> {
             ResponseEntity<Map<String, Object>> response =
-                CLIENT
+                restClient
                     .post()
                     .uri(url)
                     .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4300,7 +4304,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .post()
                       .uri(url)
                       .headers(
@@ -4325,7 +4329,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_DISTRIBUTE, "WBI:100000000000000000000000000000000006");
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4379,7 +4383,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_DISTRIBUTE, "WBI:100000000000000000000000000000000006");
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4418,7 +4422,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_DISTRIBUTE, "WBI:100000000000000000000000000000000006");
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4466,7 +4470,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .post()
                       .uri(url)
                       .headers(
@@ -4481,7 +4485,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .post()
                       .uri(url)
                       .headers(
@@ -4506,7 +4510,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable response =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url)
                   .headers(headersInt -> headersInt.addAll(headers))
@@ -4525,7 +4529,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_DISTRIBUTE, sourceWorkbasketId);
       ResponseEntity<BulkOperationResultsRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4547,7 +4551,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_DISTRIBUTE, sourceWorkbasketId);
       ResponseEntity<BulkOperationResultsRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4571,7 +4575,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4588,7 +4592,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES,
               "TKI:000000000000000000000000000000000136");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4609,7 +4613,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4626,7 +4630,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES_FORCE,
               "TKI:000000000000000000000000000000000100");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4651,7 +4655,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4672,7 +4676,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES,
               "TKI:000000000000000000000000000000000136");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4696,7 +4700,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4718,7 +4722,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES,
               "TKI:000000000000000000000000000000000236");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4742,7 +4746,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4762,7 +4766,7 @@ class TaskControllerIntTest {
               "TKI:000000000000000000000000000000000136");
       ThrowingCallable requestChangesResponse =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4787,7 +4791,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4804,7 +4808,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW,
               "TKI:000000000000000000000000000000000035");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4825,7 +4829,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4842,7 +4846,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW_FORCE,
               "TKI:000000000000000000000000000000000101");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4867,7 +4871,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4888,7 +4892,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW,
               "TKI:000000000000000000000000000000000035");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4910,7 +4914,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4932,7 +4936,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW,
               "TKI:000000000000000000000000000000000100");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4954,7 +4958,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4974,7 +4978,7 @@ class TaskControllerIntTest {
               "TKI:000000000000000000000000000000000035");
       ThrowingCallable requestReviewResponse =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4998,7 +5002,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5014,7 +5018,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_COMPLETE, "TKI:000000000000000000000000000000000102");
       ResponseEntity<TaskRepresentationModel> completeResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5040,7 +5044,7 @@ class TaskControllerIntTest {
       TaskIdListRepresentationModel request = new TaskIdListRepresentationModel(taskIds);
 
       ResponseEntity<Map> response =
-          CLIENT
+          restClient
               .patch()
               .uri(url)
               .headers(h -> h.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5065,7 +5069,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5082,7 +5086,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_COMPLETE_FORCE,
               "TKI:000000000000000000000000000000000028");
       ResponseEntity<TaskRepresentationModel> forceCompleteResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5108,7 +5112,7 @@ class TaskControllerIntTest {
       TaskIdListRepresentationModel request = new TaskIdListRepresentationModel(taskIds);
 
       ResponseEntity<BulkOperationResultsRepresentationModel> response =
-          CLIENT
+          restClient
               .patch()
               .uri(url)
               .headers(h -> h.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5135,7 +5139,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5151,7 +5155,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CANCEL, "TKI:000000000000000000000000000000000103");
       ResponseEntity<TaskRepresentationModel> cancelResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5173,7 +5177,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -5189,7 +5193,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_TERMINATE, "TKI:000000000000000000000000000000000103");
       ResponseEntity<TaskRepresentationModel> terminateResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -5212,7 +5216,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5228,7 +5232,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM, "TKI:000000000000000000000000000000000033");
       ResponseEntity<TaskRepresentationModel> claimResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5249,7 +5253,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5265,7 +5269,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM_FORCE, "TKI:000000000000000000000000000000000029");
       ResponseEntity<TaskRepresentationModel> claimResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5283,7 +5287,7 @@ class TaskControllerIntTest {
     void should_SelectAndClaimTasks() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_SELECT_AND_CLAIM + "?custom14=abc");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -5294,7 +5298,7 @@ class TaskControllerIntTest {
 
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID, response.getBody().getTaskId());
       ResponseEntity<TaskRepresentationModel> responseGetTask =
-          CLIENT
+          restClient
               .get()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -5315,7 +5319,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5331,7 +5335,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM, "TKI:000000000000000000000000000000000032");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5353,7 +5357,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5370,7 +5374,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_CLAIM + "?keepOwner=true",
               "TKI:000000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5394,7 +5398,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5411,7 +5415,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_CLAIM_FORCE + "?keepOwner=true",
               "TKI:000000000000000000000000000000000001");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5435,7 +5439,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5451,7 +5455,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM_FORCE, "TKI:000000000000000000000000000000000027");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -5472,7 +5476,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000026");
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5490,7 +5494,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_CLAIM, "TKI:000000000000000000000000000000000026");
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .delete()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5514,7 +5518,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5529,7 +5533,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_SET_READ, "TKI:000000000000000000000000000000000025");
       ResponseEntity<TaskRepresentationModel> setReadResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5550,7 +5554,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5565,7 +5569,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_SET_READ, "TKI:000000000000000000000000000000000027");
       ResponseEntity<TaskRepresentationModel> setUnreadResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5591,7 +5595,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5606,7 +5610,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_REOPEN, "TKI:000000000000000000000000000000000075");
       ResponseEntity<TaskRepresentationModel> reopenResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -5626,7 +5630,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-2-2")))
@@ -5643,7 +5647,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable call =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-2-2")))
@@ -5663,7 +5667,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -5680,7 +5684,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable call =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(
@@ -5701,7 +5705,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -5718,7 +5722,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable call =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
